--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,8 @@ maintenance = { status = "passively-maintained" }
 [dependencies]
 openvr_sys = "2.0.3"
 lazy_static = "1.3.0"
+windows = {version = "0.51.1", optional = true, features = ["Win32_Graphics_Direct3D11"]}
+
+[features]
+default = ["submit_d3d11"]
+submit_d3d11 = ["dep:windows"]
