--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,11 @@ authors = [
     "Colin Sherratt",
     "Erick Tryzelaar",
     "Rene Eichhorn",
-    "Benjamin Saunders"
+    "Benjamin Saunders",
+    "Alexander Brook Perry", 
+    "Arthur Brainville"
 ]
+edition = "2021"
 license = "MIT"
 
 homepage = "https://github.com/rust-openvr/rust-openvr"
@@ -22,7 +25,7 @@ travis-ci = { repository = "rust-openvr/rust-openvr" }
 maintenance = { status = "passively-maintained" }
 
 [dependencies]
-openvr_sys = "2.0.3"
+openvr_sys = { git = "https://github.com/alexgeek/rust-openvr-sys.git", branch = "update-openvr-v2.5.1" }
 lazy_static = "1.3.0"
 windows = {version = "0.51.1", optional = true, features = ["Win32_Graphics_Direct3D11"]}
 
