--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ travis-ci = { repository = "rust-openvr/rust-openvr" }
 maintenance = { status = "passively-maintained" }
 
 [dependencies]
-openvr_sys = { git = "https://github.com/alexgeek/rust-openvr-sys.git", branch = "update-openvr-v2.5.1" }
+openvr_sys = { git = "https://github.com/alexgeek/rust-openvr-sys.git", branch = "master" }
 lazy_static = "1.3.0"
 windows = {version = "0.51.1", optional = true, features = ["Win32_Graphics_Direct3D11"]}
 
